# analytics-server

./: .dockerignore  .gitignore  .stackversion  Cargo.toml  README.md  analytics-server.sln  docker-compose.yml  nuget.config
.cargo/: config.toml
.devcontainer/: .gitkeep  Dockerfile  devcontainer.json  docker-compose.yml
.github/: CONTRIBUTING.md
.github/workflows/: Lint.yml  codeql.yml  lint.yml  release-nightly.yml  release-stable.yml
agent/: Cargo.toml  README.md  build.rs
agent/src/: main.rs
charts/: README.md
compose/: README.md
compose/clickhouse/: config.xml  users.xml
docker/: README.md  amd64.Dockerfile  arm64.Dockerfile  windows.Dockerfile
docker/scripts/: docker-entrypoint.sh  liblog.sh  run.sh
prisma/: Cargo.toml
prisma/src/: main.rs
protos/: Cargo.toml  analytics.proto  build.rs
protos/src/: lib.rs
server/: Cargo.toml  Dockerfile  build.rs
server/prisma/: schema.prisma
server/prisma/migrations/20221022013322_init/: migration.sql
server/prisma/migrations/20221022013546_update_db_names/: migration.sql
server/prisma/migrations/20221022013700_update_columns/: migration.sql
server/src/: catchers.rs  config.rs  errors.rs  lib.rs  macros.rs  main.rs  null_writer.rs  sentinel.rs  sentinel_test.rs  server.rs  setup_utils.rs
server/src/clickhouse/: client.rs  mod.rs
server/src/endpoints/: endpoint.rs  endpoint_manager.rs  mod.rs
server/src/middleware/: auth.rs  mod.rs  uuid.rs
server/src/models/: dashboard.rs  mod.rs  response.rs
server/src/routes/: api_result.rs  instances.rs  main.rs  mod.rs  stats.rs
server/src/routes/api/: mod.rs
src/Noelware.Analytics.Server/: Noelware.Analytics.Server.csproj  Program.cs
src/Noelware.Analytics.Server/Controllers/: ApiV1Controller.cs
src/Noelware.Analytics.Server/Extensions/: LogLevelExtensions.cs  StringExtensions.cs
src/Noelware.Analytics.Server/Services/: AlertingService.cs  ClickHouseService.cs
