# 🐻‍❄️🐾 Noelware Analytics: Platform to build upon metrics ingested from any source, from your HTTP server to system-level metrics
# Copyright 2022 Noelware <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "analytics-server"
description = "🐻‍❄️🐾 Platform to build upon metrics ingested from any source, from your HTTP server to system-level metrics"
homepage = "https://analytics.noelware.org"
version = "0.0.0-dev.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
analytics-protobufs = { path = "../protos" }
ansi_term = "0.12.1"
anyhow = "1.0.66"
async-trait = "0.1.58"
chrono = { version = "0.4.22", features = ["serde"] }
clickhouse-rs = "1.0.0-alpha.1"
dotenv = "0.15.0"
fern = "0.6.1"
futures = { version = "0.3.25", default-features = false, features = ["std"] }
futures-util = "0.3.25"
log = "0.4.17"
once_cell = "1.16.0"
regex = "1.7.0"
sentry = "0.29.0"
sentry-log = "0.29.0"
sentry-tracing = "0.29.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
static-files = "0.2.3"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-test = "0.4.2"
async-recursion = "1.0.0"
rsa = "0.7.2"
rand = "0.8.5"

[dependencies.redis]
version = "0.22.1"
features = ["connection-manager", "async-std-comp", "serde_json"]

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.2"
default-features = false
features = ["postgresql"]

[build-dependencies]
chrono = "0.4.22"

[[bin]]
path = "src/main.rs"
name = "analytics-server"
