# 🐻‍❄️🐾 Noelware Analytics: Platform to build upon metrics ingested from any source, from your HTTP server to system-level metrics
# Copyright 2022-2023 Noelware <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "analytics-server"
description = "🐻‍❄️🐾 Platform to build upon metrics ingested from any source, from your HTTP server to system-level metrics"
homepage = "https://analytics.noelware.org"
version = "0.0.0-dev.0"
edition = "2021"

[dependencies]
analytics-protobufs = { path = "../protos" }
ansi_term = "0.12.1"
anyhow = "1.0.69"
async-recursion = "1.0.2"
async-trait = "0.1.66"
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
clickhouse-rs = "1.0.0-alpha.1"
dotenv = "0.15.0"
fern = "0.6.1"
futures = { version = "0.3.26", default-features = false, features = ["std"] }
futures-util = "0.3.26"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.7.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rsa = "0.7.2"
sentry = "0.30.0"
sentry-log = "0.30.0"
sentry-tracing = "0.30.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["full"] }
tokio-test = "0.4.2"
tonic = "0.8.3"

[dependencies.redis]
version = "0.22.3"
features = ["connection-manager", "async-std-comp", "serde_json"]

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.2"
default-features = false
features = ["postgresql"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]

[build-dependencies]
chrono = "0.4.23"

[[bin]]
path = "src/main.rs"
name = "analytics-server"
